# regret-solver

./: .stylish-haskell.yaml  README.md  stack.yaml
dudo/: README.md  dudo.cabal
dudo/app/: Main.hs
dudo/src/Game/: Dudo.hs
game/: game.cabal
game/src/: Game.hs  Orphans.hs
game/src/Control/Monad/: Random.hs
game/src/Data/: Dist.hs
game/src/Data/Map/: Generic.hs  VecMap.hs
game/src/Data/Map/Mutable/: Generic.hs
game/src/Data/Map/VecMap/: Unboxed.hs
game/src/Data/Maybe/: Util.hs
game/src/Data/Strict/Maybe/: Util.hs
game/src/Data/Vector/: Class.hs
game/src/Game/: PlayerMap.hs
kuhn-poker/: README.md  kuhn-poker.cabal
kuhn-poker/app/: Main.hs
kuhn-poker/src/Game/: KuhnPoker.hs
regret/: regret.cabal
regret/src/: Game.hs  Orphans.hs
regret/src/Control/Monad/: Random.hs  Scale.hs
regret/src/Data/: Dist.hs  Normalizing.hs  SelectionMap.hs
regret/src/Data/Map/: Generic.hs  VecMap.hs
regret/src/Data/Map/Mutable/: Generic.hs
regret/src/Data/Vector/: Class.hs
regret/src/Game/: PlayerMap.hs  Regret.hs
regret/src/Game/Regret/: Internal.hs  Monad.hs
regret/src/Game/Regret/Options/: Class.hs  SelectionPath.hs
regret/src/Game/Regret/Options/SelectionPath/: Map.hs
rps/: rps.cabal
rps/app/: Main.hs
rps/src/Game/: RPS.hs
select-game/: README.md  select-game.cabal
select-game/src/: Orphans.hs
select-game/src/Control/Monad/: Select.hs
select-game/src/Control/Monad/Select/: Internal.hs
select-game/src/Data/: Some.hs
select-game/src/Data/DList/: Strict.hs
select-game/src/Game/: Select.hs
select-game/src/Game/Select/: Helpers.hs  Internal.hs  Items.hs
