name: game
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 David Spies
maintainer: example@example.com
homepage: https://github.com/davidspies/regret-solver#readme
category: Game
author: David Spies
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/davidspies/regret-solver

library
    exposed-modules:
        Control.Monad.Random
        Data.Dist
        Data.Map.Generic
        Data.Map.Mutable.Generic
        Data.Map.VecMap
        Data.Vector.Class
        Game
        Game.PlayerMap
    build-depends:
        base >=4.7 && <5,
        MemoTrie -any,
        containers -any,
        hashable -any,
        hashtables -any,
        pcg-random -any,
        strict -any,
        vector -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Data.Dist.Internal
        Data.Strict.Maybe.Util
        Orphans
