name: game
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 David Spies
maintainer: example@example.com
homepage: https://github.com/davidspies/regret-solver#readme
category: Game
author: David Spies
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/davidspies/regret-solver

library
    exposed-modules:
        Control.Monad.Random
        Data.Dist
        Data.Map.Generic
        Data.Map.Mutable.Generic
        Data.Map.VecMap
        Data.Map.VecMap.Unboxed
        Data.Vector.Class
        Game
        Game.PlayerMap
    build-depends:
        base >=4.7 && <5,
        MemoTrie -any,
        containers -any,
        data-default -any,
        hashable -any,
        hashtables -any,
        pcg-random -any,
        strict -any,
        vector -any,
        vector-th-unbox -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Data.Dist.Internal
        Data.Maybe.Util
        Data.Strict.Maybe.Util
        Orphans
