name:                kuhn-poker
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/davidspies/kuhn-poker#readme
license:             BSD3
license-file:        ../LICENSE
author:              David Spies
maintainer:          dnspies@gmail.com
copyright:           2017 David Spies
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.KuhnPoker
  build-depends:       base >= 4.7 && < 5
                     , regret
                     , select-game
                     , hashable
                     , vector
  default-language:    Haskell2010

executable kuhn-poker
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kuhn-poker
                     , regret
                     , select-game
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/davidspies/kuhn-poker
