name: kuhn-poker
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
copyright: 2017 David Spies
maintainer: dnspies@gmail.com
homepage: https://github.com/davidspies/kuhn-poker#readme
category: Game
author: David Spies
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/davidspies/kuhn-poker

library
    exposed-modules:
        Game.KuhnPoker
    build-depends:
        base >=4.7 && <5,
        regret -any,
        select-game -any,
        hashable -any,
        vector -any
    default-language: Haskell2010
    hs-source-dirs: src

executable kuhn-poker
    main-is: Main.hs
    build-depends:
        base -any,
        kuhn-poker -any,
        regret -any,
        select-game -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
