name: regret
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
copyright: 2017 David Spies
maintainer: dnspies@gmail.com
homepage: https://github.com/davidspies/regret#readme
category: Game
author: David Spies
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/davidspies/regret

library
    exposed-modules:
        Data.Dist
        Data.Map.Generic
        Data.Map.Mutable.Generic
        Data.Map.VecMap
        Data.Vector.Class
        Game
        Game.PlayerMap
        Game.Regret
    build-depends:
        base >=4.7 && <5,
        MemoTrie -any,
        containers -any,
        hashable -any,
        hashtables -any,
        monad-loops -any,
        mtl -any,
        optparse-applicative -any,
        pcg-random -any,
        strict -any,
        vector -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Control.Monad.Random
        Control.Monad.Scale
        Data.Dist.Internal
        Data.Normalizing
        Data.Strict.Maybe.Util
        Game.Regret.Internal
        Game.Regret.Monad
        Orphans
