name:                rps
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/davidspies/rps#readme
license:             GPL-3
license-file:        LICENSE
author:              David Spies
maintainer:          dnspies@gmail.com
copyright:           2017 David Spies
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.RPS
  build-depends:       base >= 4.7 && < 5
                     , regret
                     , containers
  default-language:    Haskell2010
  ghc-options:        -Wall -Werror

executable rps
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , rps
                     , regret
  default-language:    Haskell2010
  ghc-options:        -Wall -Werror

source-repository head
  type:     git
  location: https://github.com/davidspies/regret
