name: rps
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
copyright: 2017 David Spies
maintainer: dnspies@gmail.com
homepage: https://github.com/davidspies/regret-solver#readme
category: Game
author: David Spies
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/davidspies/regret-solver

library
    exposed-modules:
        Game.RPS
    build-depends:
        base >=4.7 && <5,
        game -any,
        containers -any
    default-language: Haskell2010
    hs-source-dirs: src

executable rps
    main-is: Main.hs
    build-depends:
        base -any,
        rps -any,
        regret -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
