name:                select-game
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/davidspies/select-game#readme
license:             BSD3
license-file:        ../LICENSE
author:              David Spies
maintainer:          dnspies@gmail.com
copyright:           2017 David Spies
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Some
                       Control.Monad.Select
                       Game.Select
  other-modules:       Data.DList.Strict
                       Control.Monad.Select.Internal
                       Game.Select.Helpers
                       Game.Select.Internal
                       Game.Select.Items
                       Orphans
  build-depends:       base >= 4.7 && < 5
                      ,dlist
                      ,regret
                      ,hashable
                      ,vector
  default-language:    Haskell2010
  ghc-options:        -Wall -Werror

source-repository head
  type:     git
  location: https://github.com/davidspies/select-game
