name: select-game
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
copyright: 2017 David Spies
maintainer: dnspies@gmail.com
homepage: https://github.com/davidspies/regret-solver#readme
category: Game
author: David Spies
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/davidspies/regret-solver

library
    exposed-modules:
        Data.Some
        Control.Monad.Select
        Game.Select
    build-depends:
        base >=4.7 && <5,
        regret -any,
        dlist -any,
        hashable -any,
        strict -any,
        vector -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Control.Monad.Select.Internal
        Game.Select.Helpers
        Game.Select.Internal
        Game.Select.Items
        Orphans
